objects/blng__RefundLinePayment__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyAmount__c</fullName>
        <label>Base Currency Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXDate__c</fullName>
        <label>Base Currency FX Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXRate__c</fullName>
        <label>Base Currency FX Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrency__c</fullName>
        <label>Base Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BillingFinanceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Finance Book</label>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipLabel>Refund Line Payments</relationshipLabel>
        <relationshipName>FinanceBookRefundlinePayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingFinancePeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Finance Period</label>
        <referenceTo>blng__FinancePeriod__c</referenceTo>
        <relationshipLabel>Refund Line Payments</relationshipLabel>
        <relationshipName>FinancePeriodRefundLinePayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__GLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Rule</label>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>Refund Lines (Payment)</relationshipLabel>
        <relationshipName>RefundLinesPaymentGLRule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__GLTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>Refund Lines (Payment)</relationshipLabel>
        <relationshipName>RefundLinesPaymentGLTreatment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__ImpactAmount__c</fullName>
        <formula>blng__Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impact Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>Refund Lines (Payment)</relationshipLabel>
        <relationshipName>RefundLinesPaymentLegalEntity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__PaymentMode__c</fullName>
        <description>Mode of Payment.
 1. &apos;Electronic&apos;, whenever Payments/ Refunds are done via Payment Gateway.
 2. &apos;External&apos;, whenever Payments/ Refunds are manually done with Cash/ Check Payment.</description>
        <inlineHelpText>Mode of Payment.
 1. &apos;Electronic&apos;, whenever Payments/ Refunds are done via Payment Gateway.
 2. &apos;External&apos;, whenever Payments/ Refunds are manually done with Cash/ Check Payment.</inlineHelpText>
        <label>Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PaymentMode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>blng__Payment__c</referenceTo>
        <relationshipName>RefundLines</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__RefundLineDate__c</fullName>
        <label>RefundLineDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__Refund__c</fullName>
        <label>Refund</label>
        <referenceTo>blng__Refund__c</referenceTo>
        <relationshipName>RefundRefundLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PostingStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__TypeAllocationUnallocation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Unallocated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unallocated?</label>
        <type>Checkbox</type>
    </fields>
    <label>Refund Line (Payment)</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Refund Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refund Lines (Payment)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>blng__Rule_on_Refund_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( blng__Amount__c )</errorConditionFormula>
        <errorMessage>We can not modify the Refund Amount</errorMessage>
    </validationRules>
</CustomObject>